2019-11-18  Charlie Zender  <zender@uci.edu>

	* NCO 4.9.0-beta02 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.9.0-beta02: Uttanasana';git push
	git tag -a 4.9.0-beta02 -m 'ncremap att_flg, centroid opt, fv2fv_flx/stt, gss n2s nfr fix, HRRR, IFS, MPAS BGC, msh_fl, ntp_mth rhea SLURM, rnr=0.0 == destonly, SGS rewrite/parallelize, TR MWF SCRIP, TR volumetric, vrt_nm, vrt prs tm_nbr fix;ncks chk_nan, chk_map, json dcm pnt fix;ncap2 -O fix';git push --tags

	* Re-design statistics format, handle TR se2se maps, allow for missing mask_a/b

	* Include mbs,rms,sdn statistics in nco_map_chk() output

2019-11-17  Charlie Zender  <zender@uci.edu>

	* Improve nco_map_chk() output formatting

2019-11-16  Charlie Zender  <zender@uci.edu>

	* Add complements to nco_map_chk() output

2019-11-15  Charlie Zender  <zender@uci.edu>

	* Support new fv2fv_flx, fv2fv_stt algorithms

2019-11-14  Charlie Zender  <zender@uci.edu>

	* Re-format chk_map output

	* NCO 4.9.0-beta01 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.9.0-beta01: Uttanasana';git push
	git tag -a 4.9.0-beta01 -m 'ncremap att_flg, centroid opt, gss n2s nfr fix, HRRR, IFS, MPAS BGC, msh_fl, ntp_mth rhea SLURM, rnr=0.0 == destonly, SGS rewrite/parallelize, TR MWF SCRIP, TR volumetric, vrt_nm, vrt prs tm_nbr fix ;ncks chk_nan, chk_map, json dcm pnt fix;ncap2 -O';git push --tags

	* ncremap allows altering mss_val without invoking -P mpas

2019-11-13  Charlie Zender  <zender@uci.edu>

	* Update ncremap TR documentation and hint on obtaining TR

2019-11-12  Charlie Zender  <zender@uci.edu>

	* Hook-up and clean-up nco_map_chk()

2019-11-10  Charlie Zender  <zender@uci.edu>

	* Add hooks for nco_map_chk()

	* Document --preserve=mean,integral

2019-11-08  Charlie Zender  <zender@uci.edu>

	* NCO 4.8.2-alpha10 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.8.2-alpha10: Pranayama';git push