@@ -1,8 +1,14 @@
-2019-11-18  Charlie Zender  <zender@uci.edu>
+2019-11-19  Charlie Zender  <zender@uci.edu>
 
 	* NCO 4.9.0-beta02 release procedure:
 	cd ~/nco;git commit -a -m 'Version 4.9.0-beta02: Uttanasana';git push
-	git tag -a 4.9.0-beta02 -m 'ncremap att_flg, centroid opt, fv2fv_flx/stt, gss n2s nfr fix, HRRR, IFS, MPAS BGC, msh_fl, ntp_mth rhea SLURM, rnr=0.0 == destonly, SGS rewrite/parallelize, TR MWF SCRIP, TR volumetric, vrt_nm, vrt prs tm_nbr fix;ncks chk_nan, chk_map, json dcm pnt fix;ncap2 -O fix';git push --tags
+	git tag -a 4.9.0-beta02 -m 'ncremap att_flg, centroid opt, fv2fv_flx/stt, gss n2s nfr fix, HRRR, IFS, MPAS BGC, msh_fl, ntp_mth rhea SLURM, rnr=0.0 == destonly, SGS rewrite/parallelize, TR MWF SCRIP, TR volumetric, vrt_nm, vrt prs tm_nbr fix;ncks area_wgt, chk_nan, chk_map, json dcm pnt fix;ncap2 -O fix';git push --tags
+
+	* nco_map_chk() gracefully handles map-files (often bilinear) with area_a/b=0, frac_a/b=0
+
+	* Add area-weighting option --area_wgt to nco_map_chk()
+
+2019-11-18  Charlie Zender  <zender@uci.edu>
 
 	* Re-design statistics format, handle TR se2se maps, allow for missing mask_a/b
 
